--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
       </div>
     </nav>
 
+<section class="container-fluid px-0">
+  <div class="row align-items-center">
+    <div class="col-lg-6 text-center d">
+      <div id="headingGroup" class="text-white text-white d-none d-lg-block mt-5">
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+    </div>
+    </div>
+    <div class="col-lg-6">
+      <img class="img-fluid" src="imgs/hand2.png" alt="Hand with candy">
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
     <!-- Optional JavaScript -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
