Added contnet with basic text styling. Changes order depending on the breakpoint with bootstrap.

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
   <div class="row align-items-center">
     <div class="col-lg-6 text-center d">
       <div id="headingGroup" class="text-white text-white d-none d-lg-block mt-5">
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-      <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-    </div>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+        <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+      </div>
     </div>
     <div class="col-lg-6">
       <img class="img-fluid" src="imgs/hand2.png" alt="Hand with candy">
@@ -73,9 +73,39 @@
   </div>
 </section>
 
+<section class="container-fluid px-0 content">
+  <div class="row align-items-center">
+    <div class="col-md-6 order-2 order-md-1">
+      <img src="imgs/milk.png" alt="" class="img-fluid">
+    </div>
+    <div class="col-md-6 text-center order-1 order-md-2">
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8 blurb">
+          <h2 style="text-transform: uppercase;">Museum of candy</h2>
+          <img src="imgs/lolli_icon.png" alt="lollipop" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos vel dignissimos sit quidem hic facere. Amet, quas excepturi blanditiis quae eveniet voluptas aut illo eos ex ipsam, quaerat dolorum aperiam!</p>  
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-
-
+<section class="container-fluid px-0 content">
+  <div class="row align-items-center">
+    <div class="col-md-6 order-2 order-md-1">
+      <img src="imgs/milk.png" alt="" class="img-fluid">
+    </div>
+    <div class="col-md-6 text-center order-1 order-md-2">
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8 blurb">
+          <h2 style="text-transform: uppercase;">Museum of candy</h2>
+          <img src="imgs/lolli_icon.png" alt="lollipop" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos vel dignissimos sit quidem hic facere. Amet, quas excepturi blanditiis quae eveniet voluptas aut illo eos ex ipsam, quaerat dolorum aperiam!</p>  
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
