--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="col-md-6 text-center order-1 order-md-2">
       <div class="row justify-content-center">
-        <div class="col-10 col-lg-8 blurb">
+        <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
           <h2 style="text-transform: uppercase;">Museum of candy</h2>
           <img src="imgs/lolli_icon.png" alt="lollipop" class="d-none d-lg-inline">
           <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos vel dignissimos sit quidem hic facere. Amet, quas excepturi blanditiis quae eveniet voluptas aut illo eos ex ipsam, quaerat dolorum aperiam!</p>  
@@ -92,12 +92,30 @@
 
 <section class="container-fluid px-0 content">
   <div class="row align-items-center">
+
+    <div class="col-md-6 text-center">
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+          <h2 style="text-transform: uppercase;">Museum of candy</h2>
+          <img src="imgs/lolli_icon.png" alt="lollipop" class="d-none d-lg-inline">
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos vel dignissimos sit quidem hic facere. Amet, quas excepturi blanditiis quae eveniet voluptas aut illo eos ex ipsam, quaerat dolorum aperiam!</p>  
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="imgs/gumball.png" alt="" class="img-fluid">
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid px-0 content">
+  <div class="row align-items-center">
     <div class="col-md-6 order-2 order-md-1">
-      <img src="imgs/milk.png" alt="" class="img-fluid">
+      <img src="imgs/sprinkles.png" alt="" class="img-fluid">
     </div>
     <div class="col-md-6 text-center order-1 order-md-2">
       <div class="row justify-content-center">
-        <div class="col-10 col-lg-8 blurb">
+        <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
           <h2 style="text-transform: uppercase;">Museum of candy</h2>
           <img src="imgs/lolli_icon.png" alt="lollipop" class="d-none d-lg-inline">
           <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos vel dignissimos sit quidem hic facere. Amet, quas excepturi blanditiis quae eveniet voluptas aut illo eos ex ipsam, quaerat dolorum aperiam!</p>  
@@ -106,8 +124,6 @@
     </div>
   </div>
 </section>
-
-
 
 
 
@@ -129,5 +145,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script>
+      $(function () {
+        $(document).scroll(function(){ 
+          var $nav = $("#mainNavbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        })
+      })  
+    </script>
   </body>
 </html>
